src/main/java/com/example/demo/controllers/errors/ErrorCode.java
package com.example.demo.controllers.errors;

public interface ErrorCode {

    String getCode();

    String getDescription();
}
